doc: desc. Querying available module variants in MIGRATING

--- a/doc/source/_static/terminal_output.css
+++ b/doc/source/_static/terminal_output.css
@@ -110,3 +110,19 @@
 .sgrkl {
     background-color: #688f8f;
 }
+
+.sgrvade {
+    color: #fce94f;
+    text-decoration: underline;
+}
+
+.sgrvahi {
+    color: #fce94f;
+    font-weight: bold;
+}
+
+.sgrvadehi {
+    color: #fce94f;
+    text-decoration: underline;
+    font-weight: bold;
+}
